# ai-token-cost-estimator

./: Cargo.toml  _headers  build.rs  index.html  installer.iss  justfile  rust-toolchain.toml  sws.toml  typos.toml  wrangler.toml
.github/workflows/: ci.yml  release.yml
scripts/: update_db.sh
src/: app.rs  colors.rs  db.rs  lib.rs  models.rs  theme.rs  tokenizer.rs  ui.rs
