[package]
name = "ai-token-cost-estimator"
version = "0.1.0"
edition = "2024"
description = "AI Token & Cost Estimator: A desktop and web tokenizer visualization tool supporting any HuggingFace tokenizer.json"
license = "MIT"

[dependencies]
egui = "0.35"
eframe = "0.35"
tokenizers = { version = "0.23.1", default-features = false, features = [
    "fancy-regex",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
egui-async = "0.5.0"
reqwest = { version = "0.13.4", features = ["json"] }
tokio_with_wasm = { version = "0.9.0", default-features = false, features = [
    "full",
    "macros",
] }
include_packed = "0.1.6"
anyhow = "1.0.103"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom3 = { package = "getrandom", version = "=0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
] }
log = "0.4"

[build-dependencies]
include_packed = { version = "0.1.6", features = ["build"] }

[[bin]]
name = "ai-token-cost-estimator"
path = "src/bin/ai_token_cost_estimator.rs"
